# LED_WatchFace

./: .gitignore  README.md  pyproject.toml
docs/: watchface_asset_spec.md
scripts/: generate_assets.py
tests/: test_asset_generation.py
watch_face/: LED.wfs
